# announcer

./: .env  Cargo.toml  README.md  announcer.json  config.json
.github/workflows/: continuous_integration.yml
migrations/: 20210628212442_sound.sql
src/: db.rs  lib.rs  main.rs  messages.rs  upload.rs
tests/: db_test.rs  file_upload.rs  messages.rs  messages_test.rs
