[package]
name = "announcer"
version = "0.1.0"
authors = ["user <savovs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde_json = "1.0"
serde = "1.0.115"
notify = { git = "https://github.com/notify-rs/notify", commit = "1fac9caec14b00f3ef23ace38eb1d1d7d7f0e3f3", branch = "main", features = ["serde"] }
surf = "2.2.0"
rodio = "0.14.0"
sqlx = { version = "0.5", features = [ "sqlite", "runtime-async-std-rustls" ] }
dotenv = "0.15.0"

[dev-dependencies]
k9 = "0.11.0"
mockall = "0.9.1"
